@@ -783,6 +783,10 @@ Size=16x2
 # Change only if testing a compatible device.
 #ProductID=0x6001
 
+# Specifies if the last line is pixel addressable (yes) or it only controls an
+# underline effect (no). [default: yes; legal: yes, no]
+#Lastline=yes
+
 
 
 ##The driver for the VFD of the Medion MD8800 PC ##
