@@ -22,6 +22,7 @@ v0.5dev (ongoing development)
  * lcdproc client: On FreeBSD show only unique processes in 'S' screen
  * picolcd: Use libusb-1.0 asynchronous transfers to fix missed keys (M. Jones)
  * sed1520: Make it work without using an external inverter
+ * lis driver: Make the last pixel row work (add lastline option parsing)
 
 v0.5.5
  + sed1330 driver: Add support for HG25504 (L. Lagendijk)
